<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kontaktliste</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="welcome_txt">Kontaktliste</string>
    <string name="new_contact">Legg til</string>
    <string name="change_contact">Lagre endringer</string>
    <string name="delete_contact">Slett</string>
    <string name="save_contact">Lagre</string>
    <string name="list_contact">List alle kontakter</string>
    <string name="change_sms">Endre felles bursdagsmelding</string>
    
    
    <!--  Add contact strings -->
    
    <string name="addContact">Legg til kontakt</string>
    <string name="firstname">Fornavn</string>
    <string name="lastname">Etternavn</string>
    <string name="phone">Telefon</string>
    <string name="birthday">Velg fødselsdag</string>
    <string name="saveContact">Lagre!</string>
    <string name="newBday">Endre fødselsdag</string>
    <string name="bday">Bursdag:</string>
    
    <!-- Delete -->
    
    <string name="confirmDelete">Slette?</string>
    <string name="yes">JA</string>
    <string name="no">NEI</string>

</resources>
